# Gen_AI-Portofolio

./: 404.html  README.md  index.html  index.txt  launch_all_demos.py  launch_demo.py  resume.html  resume.txt
.github/workflows/: deploy.yml
ML_EndToEnd_Projects/: .gitignore  DASHBOARD.md  DEMO_DASHBOARD.md  Dockerfile  QUICKSTART.md  README.md  dashboard.py  requirements.txt  setup_all_projects.sh
ML_EndToEnd_Projects/.github/workflows/: ci.yml
ML_EndToEnd_Projects/gen_ai/: README.md
ML_EndToEnd_Projects/gen_ai/11_ai_code_generator/: README.md  app.py  dashboard.py
ML_EndToEnd_Projects/gen_ai/12_ai_content_creator/: README.md  app.py  dashboard.py
ML_EndToEnd_Projects/gen_ai/13_document_intelligence/: README.md  app.py
ML_EndToEnd_Projects/gen_ai/14_conversational_ai/: README.md  app.py
ML_EndToEnd_Projects/gen_ai/15_drug_discovery_ai/: README.md  app.py
ML_EndToEnd_Projects/traditional_ml/: README.md
ML_EndToEnd_Projects/traditional_ml/01_ecommerce_recommender/: Dockerfile  Dockerfile.streamlit  README.md  app.py  dashboard.py  pyproject.toml
ML_EndToEnd_Projects/traditional_ml/01_ecommerce_recommender/src/api/: app.py  main.py
ML_EndToEnd_Projects/traditional_ml/01_ecommerce_recommender/src/dashboard/: streamlit_app.py
ML_EndToEnd_Projects/traditional_ml/01_ecommerce_recommender/src/data_processing/: preprocess.py  sample_data.py
ML_EndToEnd_Projects/traditional_ml/01_ecommerce_recommender/src/feature_engineering/: features.py
ML_EndToEnd_Projects/traditional_ml/01_ecommerce_recommender/src/feature_pipeline/: load.py
ML_EndToEnd_Projects/traditional_ml/01_ecommerce_recommender/src/inference_pipeline/: inference.py
ML_EndToEnd_Projects/traditional_ml/01_ecommerce_recommender/src/training_pipeline/: train.py
ML_EndToEnd_Projects/traditional_ml/01_ecommerce_recommender/src/utils/: config.py  logging.py
ML_EndToEnd_Projects/traditional_ml/02_credit_risk_assessment/: README.md  app.py
ML_EndToEnd_Projects/traditional_ml/03_credit_risk_cecl_model/: README.md  requirements.txt
ML_EndToEnd_Projects/traditional_ml/03_stock_forecasting/: README.md  app.py
ML_EndToEnd_Projects/traditional_ml/04_computer_vision/: README.md  app.py
ML_EndToEnd_Projects/traditional_ml/04_stock_forecasting/: README.md  dashboard.py
ML_EndToEnd_Projects/traditional_ml/05_computer_vision/: README.md
ML_EndToEnd_Projects/traditional_ml/05_nlp_text_analysis/: README.md  dashboard.py
ML_EndToEnd_Projects/traditional_ml/06_fraud_detection/: README.md  app.py
ML_EndToEnd_Projects/traditional_ml/06_nlp_text_analysis/: README.md  app.py
ML_EndToEnd_Projects/traditional_ml/07_customer_churn/: README.md
ML_EndToEnd_Projects/traditional_ml/07_fraud_detection/: README.md
ML_EndToEnd_Projects/traditional_ml/08_customer_churn/: README.md  app.py
ML_EndToEnd_Projects/traditional_ml/08_supply_chain_optimization/: README.md
ML_EndToEnd_Projects/traditional_ml/09_energy_prediction/: README.md
ML_EndToEnd_Projects/traditional_ml/09_supply_chain_optimization/: README.md  app.py
ML_EndToEnd_Projects/traditional_ml/10_autonomous_vehicle/: README.md
ML_EndToEnd_Projects/traditional_ml/10_energy_prediction/: README.md  app.py
ML_EndToEnd_Projects/traditional_ml/11_autonomous_vehicle/: README.md  app.py
ML_EndToEnd_Projects/traditional_ml/credit_risk_cecl_model/: README.md  requirements.txt
_next/static/chunks/: 164f4fb6.4532049640ff0f1f.js  190-56b21db26208d163.js  5bf9cb63-97e355b004552d26.js  5bf9cb63-d4e3a4c2c390428d.js  712-daf723e59ff02bf3.js  806-3eeadfd009f79511.js  865-89daa30068c77e7e.js  969.f6f93c7245d212e4.js  b5fbfa08-2d5dfb19c81529bf.js  b5fbfa08-e66a7d4fe588d7d3.js  main-486cbe98d8447682.js  (+6 more)
(+46 files in other folders)
